# factive-tom

./: README.md  pyproject.toml
factive_tom/: functions.py
scripts/: accuracy.py
tests/: test_factive_tom.py
